<?xml version="1.0" encoding="utf-8"?>
<!--fragment_join_leage.xml controls the static layout of the join leagues page as well as defines
the methods that should be called in the case of an event-->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".JoinLeagueFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="300dp"
            android:layout_height="400dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Frame_Layout">

            <TextView
                android:id="@+id/header_join_league"
                style="@style/H1"
                android:text="Join League"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/text_join_league_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Row_Text"
                android:text="@string/join_with_code"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/header_join_league"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/text_join_league_2"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                style="@style/Row_Text"
                android:text="@string/join_with_code_details"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/text_join_league_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/edit_text_league_join_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/join_with_code_hint"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/text_join_league_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/button_join_league_code"
                android:layout_width="125dp"
                android:layout_height="50dp"
                style="@style/Button"
                android:text="Join"
                android:textSize="20sp"
                android:onClick="onClickHandler"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_league_join_code"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>